@@ -19,13 +19,22 @@
 
 """Filter a subunit stream to get aggregate statistics."""
 
+from optparse import OptionParser
 import sys
 import unittest
 
-from subunit import ProtocolTestCase, TestResultStats
+from subunit import DiscardStream, ProtocolTestCase, TestResultStats
 
+parser = OptionParser(description=__doc__)
+parser.add_option("--no-passthrough", action="store_true",
+    help="Hide all non subunit input.", default=True, dest="no_passthrough")
+(options, args) = parser.parse_args()
 result = TestResultStats(sys.stdout)
-test = ProtocolTestCase(sys.stdin)
+if options.no_passthrough:
+    passthrough_stream = DiscardStream()
+else:
+    passthrough_stream = None
+test = ProtocolTestCase(sys.stdin, passthrough=passthrough_stream)
 test.run(result)
 result.formatStats()
 if result.wasSuccessful():
